--- a/AIMidTermRevise.tex
+++ b/AIMidTermRevise.tex
@@ -61,7 +61,7 @@ The properties of task environments (TE) are:
 There are several intelligent agents; some of them are:
 \begin{itemize}
   \item Simple-reflex agents
-  \item Model-based reflex agents --> handle parital observability and keep track of the percept sequence up to date (internal state)
+  \item Model-based reflex agents
   \item Goal-based agents
   \item Utility-based agents
   \item Learning agents
